test/files/pos/t1782/Days.java
public enum Days {
    Friday, Sunday
}
