test/files/neg/t2442/MyEnum.java
public enum MyEnum {
  ONE, TWO, THREE;
}